added missing views

--- a/PizzaTimer/Base.lproj/Main.storyboard
+++ b/PizzaTimer/Base.lproj/Main.storyboard
@@ -65,7 +65,7 @@
             </objects>
             <point key="canvasLocation" x="-807" y="63"/>
         </scene>
-        <!--Master List Controller-->
+        <!--Main List-->
         <scene sceneID="yM2-0E-VsB">
             <objects>
                 <viewController id="SD5-UY-Ryt" customClass="MasterListController" customModule="PizzaTimer" customModuleProvider="target" sceneMemberID="viewController">
@@ -120,6 +120,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hdq-tf-qpL"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Main List" id="jBE-e3-KUq">
+                        <barButtonItem key="rightBarButtonItem" title="Custom" id="j8H-2c-0IN">
+                            <connections>
+                                <segue destination="6fR-Kx-skD" kind="show" id="QCa-ZE-BCG"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="masterListTable" destination="IRS-5W-OdD" id="M77-6R-ilw"/>
                     </connections>
@@ -128,7 +135,123 @@
             </objects>
             <point key="canvasLocation" x="-58" y="63"/>
         </scene>
-        <!--Timer View Controller-->
+        <!--Custom Items-->
+        <scene sceneID="XCI-GW-fox">
+            <objects>
+                <viewController id="6fR-Kx-skD" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DEy-6h-IEB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zaw-zt-0kW">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="QfZ-Qv-QCZ" detailTextLabel="AWx-aI-zx9" style="IBUITableViewCellStyleSubtitle" id="n4v-yA-JjM">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="n4v-yA-JjM" id="YxI-qO-m64">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="QfZ-Qv-QCZ">
+                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AWx-aI-zx9">
+                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xbU-qg-YPz" firstAttribute="trailing" secondItem="zaw-zt-0kW" secondAttribute="trailing" id="JWu-n5-Ucj"/>
+                            <constraint firstItem="zaw-zt-0kW" firstAttribute="top" secondItem="xbU-qg-YPz" secondAttribute="top" id="NS7-Hi-C7m"/>
+                            <constraint firstItem="zaw-zt-0kW" firstAttribute="leading" secondItem="xbU-qg-YPz" secondAttribute="leading" id="XaN-na-Jq2"/>
+                            <constraint firstItem="xbU-qg-YPz" firstAttribute="bottom" secondItem="zaw-zt-0kW" secondAttribute="bottom" id="x6E-U1-WOw"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="xbU-qg-YPz"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Custom Items" id="N1T-2f-uFA">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="hhN-EA-nbd">
+                            <connections>
+                                <segue destination="jvI-mI-SIN" kind="show" id="mv9-kn-C8P"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G86-Ou-UK0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-58" y="851"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="DhP-q4-h3a">
+            <objects>
+                <viewController id="jvI-mI-SIN" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LVu-ch-t68">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Name" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HjK-hu-PKT">
+                                <rect key="frame" x="112" y="171" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="6Wg-0P-hUQ"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VbC-KH-heX">
+                                <rect key="frame" x="0.0" y="278" width="375" height="162"/>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zhl-ya-6B3">
+                                <rect key="frame" x="156" y="467" width="62" height="30"/>
+                                <state key="normal" title="Add Item"/>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Brand" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P4D-Mk-9rK">
+                                <rect key="frame" x="112" y="221" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="jl2-d1-4a6"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="HjK-hu-PKT" firstAttribute="leading" secondItem="9Qb-fW-D6B" secondAttribute="leading" constant="112" id="1Sk-OH-Way"/>
+                            <constraint firstItem="VbC-KH-heX" firstAttribute="leading" secondItem="LVu-ch-t68" secondAttribute="leading" id="5jK-Ik-Kug"/>
+                            <constraint firstItem="9Qb-fW-D6B" firstAttribute="bottom" secondItem="VbC-KH-heX" secondAttribute="bottom" constant="227" id="ERg-YE-KXW"/>
+                            <constraint firstAttribute="trailing" secondItem="VbC-KH-heX" secondAttribute="trailing" id="Mi5-f7-bm6"/>
+                            <constraint firstItem="Zhl-ya-6B3" firstAttribute="centerX" secondItem="VbC-KH-heX" secondAttribute="centerX" id="POW-9n-YWp"/>
+                            <constraint firstItem="P4D-Mk-9rK" firstAttribute="centerX" secondItem="VbC-KH-heX" secondAttribute="centerX" id="XIb-55-qR6"/>
+                            <constraint firstItem="P4D-Mk-9rK" firstAttribute="top" secondItem="HjK-hu-PKT" secondAttribute="bottom" constant="20" id="cfE-Cq-AvW"/>
+                            <constraint firstItem="Zhl-ya-6B3" firstAttribute="top" secondItem="VbC-KH-heX" secondAttribute="bottom" constant="27" id="cq0-lI-zcM"/>
+                            <constraint firstItem="VbC-KH-heX" firstAttribute="top" secondItem="P4D-Mk-9rK" secondAttribute="bottom" constant="27" id="hVG-du-4kW"/>
+                            <constraint firstItem="HjK-hu-PKT" firstAttribute="trailing" secondItem="P4D-Mk-9rK" secondAttribute="trailing" id="m1Y-jJ-Jth"/>
+                            <constraint firstItem="HjK-hu-PKT" firstAttribute="leading" secondItem="P4D-Mk-9rK" secondAttribute="leading" id="my5-PW-Edk"/>
+                            <constraint firstItem="HjK-hu-PKT" firstAttribute="top" secondItem="9Qb-fW-D6B" secondAttribute="top" constant="107" id="xSa-uS-AgD"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9Qb-fW-D6B"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="slC-iK-S1A" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="742" y="851"/>
+        </scene>
+        <!--Timer-->
         <scene sceneID="hHk-5l-MWd">
             <objects>
                 <viewController id="Wsr-b6-LN4" customClass="TimerViewController" customModule="PizzaTimer" customModuleProvider="target" sceneMemberID="viewController">
@@ -158,6 +281,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yKv-UZ-LkF"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Timer" id="BsR-pp-Zv5"/>
                     <connections>
                         <outlet property="customLabel" destination="Y32-Ts-CRL" id="zXj-Jj-stb"/>
                         <outlet property="nameLabel" destination="CuC-PL-ryW" id="rMU-K7-Szt"/>
